--- a/src/styles/icon.less
+++ b/src/styles/icon.less
@@ -1,8 +1,13 @@
 @font-face {
-  font-family: 'iconfont';
-  /* Project id 4090488 */
-  src: url('//at.alicdn.com/t/c/font_4090488_5cefwu23l28.woff2?t=1685198392545') format('woff2'), url('//at.alicdn.com/t/c/font_4090488_5cefwu23l28.woff?t=1685198392545') format('woff'), url('//at.alicdn.com/t/c/font_4090488_5cefwu23l28.ttf?t=1685198392545') format('truetype');
+  font-family: 'iconfont'; /* Project id 4090488 */
+  src: url('//at.alicdn.com/t/c/font_4090488_5cefwu23l28.woff2?t=1685198392545')
+      format('woff2'),
+    url('//at.alicdn.com/t/c/font_4090488_5cefwu23l28.woff?t=1685198392545')
+      format('woff'),
+    url('//at.alicdn.com/t/c/font_4090488_5cefwu23l28.ttf?t=1685198392545')
+      format('truetype');
 }
+
 .iconfont {
   font-family: 'iconfont' !important;
   font-size: 16px;
@@ -10,66 +15,87 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .icon-dianzan:before {
   content: '\e609';
 }
+
 .icon-dianzan2:before {
   content: '\e60a';
 }
+
 .icon-guanbi:before {
   content: '\e60b';
 }
+
 .icon-gengduo:before {
   content: '\e60c';
 }
+
 .icon-pinglun:before {
   content: '\e60d';
 }
+
 .icon-yanzhengma:before {
   content: '\e60e';
 }
+
 .icon-shouji:before {
   content: '\e60f';
 }
+
 .icon-shanchu:before {
   content: '\e610';
 }
+
 .icon-shouye:before {
   content: '\e611';
 }
+
 .icon-sousuo:before {
   content: '\e612';
 }
+
 .icon-lishi:before {
   content: '\e613';
 }
+
 .icon-fenxiang:before {
   content: '\e614';
 }
+
 .icon-wuwangluo:before {
   content: '\e615';
 }
+
 .icon-wode:before {
   content: '\e616';
 }
+
 .icon-wenda:before {
   content: '\e617';
 }
+
 .icon-zuojiantou:before {
   content: '\e618';
 }
+
 .icon-shipin:before {
   content: '\e619';
 }
+
 .icon-youjiantou:before {
   content: '\e61a';
 }
+
 .icon-yuedu:before {
   content: '\e61b';
 }
+
 .icon-zuopin:before {
   content: '\e61c';
 }
+
 .icon-shoucang:before {
   content: '\e61d';
 }
